# uv_example

./: README.md  main.py  pyproject.toml  run.sh
