[project]
name = "she-codes-uv-example"
version = "0.1.3"
description = "Example package deployment"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Oliver Lavers", email = "hauteclere.code@gmail.com" }]
dependencies = [
    "cowsay>=6.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
she-codes-uv-example = "she_codes_uv_example.cli:main"
